--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Tactile theme
-description: Tactile is a theme for GitHub Pages.
+title: Pinzhen Liao
+description: 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-tactile
